--- a/index.html
+++ b/index.html
@@ -119,6 +119,40 @@
                 max-height: 70vh;
             }
         }
+
+        /* ...existing code... */
+        @media screen and (max-width: 768px) {
+            .gallery img {
+                width: calc(50% - 10px);
+            }
+
+            .close {
+                top: 10px;
+                right: 15px;
+                font-size: 30px;
+            }
+
+            .modal-content {
+                max-height: 70vh;
+            }
+
+            .prev,
+            .next {
+                font-size: 22px;
+                padding: 8px;
+                top: 60%;
+            }
+
+            .prev {
+                left: 2px;
+            }
+
+            .next {
+                right: 2px;
+            }
+        }
+
+        /* ...existing code... */
     </style>
 </head>
 
