--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             color: white;
             font-family: sans-serif;
             text-align: center;
-            padding: 5px;
+            padding: 30px;
         }
 
         .gallery {
@@ -104,6 +104,10 @@
 
         /* Responsive mobile */
         @media screen and (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
             .gallery img {
                 width: calc(50% - 10px);
 
